@@ -1,4 +1,4 @@
 #include "erss.h"
 
-int erss_net_poll (void *data);
-void erss_net_connect(erss_feed *f);
+int  erss_net_poll (void *data);
+void erss_net_connect(Erss_Feed *f);
